--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
   <!-- <link rel="stylesheet" href="css/styles.candle.css"> -->
   <link rel="icon" href="favicon.ico">
   <title>HBD Muffin 🎂 🥳🥳🥳</title>
-  <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" cross-origin="anonymous"></script> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-  <link rel="stylesheet" href="css/styles.candle.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <section id="candle-placeholder">
     <h1>
 
-      Make a wish..<br />.. and blow out the candle
+      Close your eyes..<br/>..Make a wish..<br/>.. and blow out the candle 😃😃😃
     </h1>
     <div id="glow" class="glow"></div>
     <div id="candle">
