--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
             {
               "particles": {
                 "number": {
-                  "value": 80,
+                  "value": 48,
                   "density": {
                     "enable": true,
-                    "value_area": 800
+                    "value_area": 320.34597365154366
                   }
                 },
                 "color": {
-                  "value": "#ffffff"
+                  "value": "#fff"
                 },
                 "shape": {
                   "type": "circle",
@@ -107,7 +107,7 @@
                   }
                 },
                 "opacity": {
-                  "value": 0.2722940776038121,
+                  "value": 0.5,
                   "random": true,
                   "anim": {
                     "enable": false,
@@ -117,7 +117,7 @@
                   }
                 },
                 "size": {
-                  "value": 3,
+                  "value": 10,
                   "random": true,
                   "anim": {
                     "enable": false,
@@ -127,16 +127,16 @@
                   }
                 },
                 "line_linked": {
-                  "enable": true,
-                  "distance": 150,
+                  "enable": false,
+                  "distance": 500,
                   "color": "#ffffff",
                   "opacity": 0.4,
-                  "width": 1
+                  "width": 2
                 },
                 "move": {
                   "enable": true,
                   "speed": 6,
-                  "direction": "none",
+                  "direction": "bottom",
                   "random": false,
                   "straight": false,
                   "out_mode": "out",
@@ -153,11 +153,11 @@
                 "events": {
                   "onhover": {
                     "enable": true,
-                    "mode": "repulse"
+                    "mode": "bubble"
                   },
                   "onclick": {
                     "enable": true,
-                    "mode": "push"
+                    "mode": "repulse"
                   },
                   "resize": true
                 },
@@ -165,14 +165,14 @@
                   "grab": {
                     "distance": 400,
                     "line_linked": {
-                      "opacity": 1
+                      "opacity": 0.5
                     }
                   },
                   "bubble": {
                     "distance": 400,
-                    "size": 40,
-                    "duration": 2,
-                    "opacity": 8,
+                    "size": 4,
+                    "duration": 0.3,
+                    "opacity": 1,
                     "speed": 3
                   },
                   "repulse": {
