--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- <link rel="stylesheet" href="css/styles.candle.css"> -->
   <link rel="icon" href="favicon.ico">
-  <title>HBD Muffin 🎂 🥳🥳🥳</title>
+  <title>HBD 🎂 🥳🥳🥳</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
